examples/negative/diagnostic_quality/effect_help_text.kai
# Diagnostic quality (#520 / category 7): when a fn body
# fires an effect the declared row omits, the typer must
# emit `error: effect not handled: Stdout` plus a help line
# that suggests *both* adding the effect to the row and
# wrapping the call in a `handle` block. We lock both help
# lines plus the anchor at the user call site.

fn helper() : Int = {
  print("inside helper")
  0
}

fn main() : Int = helper()
