examples/negative/diagnostic_quality/effect_help_text.diag.expected
# Anchor at user file + help text suggesting both fixes.
error: effect not handled: Stdout
effect_help_text.kai:9
  print("inside helper")
add `/ Stdout`
handle { ... } with Stdout
